syntax = "proto3";

option go_package = "./proto";

package greet_service;

service GreetService{
    rpc SayHellp(NoParam) returns (HelloResponse);
    rpc  ServerStreaming(NamesList) returns (stream HelloResponse);
    rpc ClientStreaming(stream HelloRequest) returns (MessagesList);
    rpc BidirectionStreaming(stream HelloRequest) returns (stream HelloResponse);
}

message NoParam{};

message HelloResponse{
    string message = 1;
};

message NamesList{
    repeated string names =1;
};

message HelloRequest {
    string name = 1;
};

message MessagesList{
    repeated string messages = 1;
};
